# rux

./: .gitignore  Cargo.toml  IMPLEMENTATION_STATUS.md  README.md
docs/: feature-map.md
docs/comparisons/: framework-comparison.md
docs/specs/: algorithms.md  build-tooling.md  compiler-architecture.md  component-system.md  dev-experience.md  endpoint-compilers.md  language-spec-v1.0.md  large-codebase-design.md  layout-system.md  platform-features.md  rendering-pipeline.md  routing-system.md  runtime-architecture.md  state-reactivity.md  swiftui-patterns-analysis.md  syntax-analysis.md  syntax-manual.md
examples/: hello_world.rsx
rux-cli/: Cargo.toml
rux-cli/src/: build.rs  commands.rs  dev_server.rs  file_watcher.rs  main.rs
rux-compiler/: Cargo.toml
rux-compiler/src/: analyzer.rs  ast.rs  codegen.rs  driver.rs  errors.rs  lexer.rs  lib.rs  optimizer.rs  parser.rs  type_checker.rs
rux-compiler/tests/: integration_test.rs
rux-core/: Cargo.toml
rux-core/src/: layout.rs  lib.rs  renderer.rs  scheduler.rs  signals.rs  virtual_tree.rs
rux-desktop/: Cargo.toml
rux-desktop/src/: lib.rs  renderer.rs
rux-runtime/: Cargo.toml
rux-runtime/src/: component.rs  executor.rs  lib.rs
rux-web/: Cargo.toml
rux-web/src/: lib.rs  renderer.rs
tests/: compiler_test.rs  integration_test.rs
